--- a/Lab Work/06_Lab/L06. HTML_CSS.html
+++ b/Lab Work/06_Lab/L06. HTML_CSS.html
@@ -26,6 +26,22 @@
 										color: blue;
 										text-align: center;	
 										}  
+<!-- Universal Selector Example: -->	* { 
+											property:value;
+										}
+										* {
+											color:blue;
+										} 
+<!-- Attribute Selector Example: --> 	a[target]{
+											color: pink;
+										} 
+										<!-- <link rel="stylesheet" type="text/css" href="con_css.css" />-->  
+<!-- Pseudo Classes Example: --> 		selector:pseudo-class {
+											property:value;
+										}							
+										a:link {
+											color: #FF0000;
+										}  
 	</style> 
 </head>
 <body>
